components/janitor-bot/tests/snapshots/integration__argocd_sync__app-changed-success.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - actions:
      - set_commit_status
    dry_run: false
    name: argocd-sync-status
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/git/commits/abc1234567890def?stat=false&verification=false&files=true
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/git/commits/abc1234567890def?stat=false&verification=false&files=true
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/statuses/abc1234567890def
    body:
      context: ArgoCD / sync / janitor-bot
      description: Succeeded - Healthy
      state: success
      target_url: "https://argocd.inf-k8s.net/applications/argocd/janitor-bot"
    service: forgejo
