components/janitor-bot/tests/snapshots/integration__argocd_sync__source-path-changed.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - action_groups:
      - actions:
          - set_commit_status
        ran: true
        when: app_changed
    dry_run: false
    name: argocd-sync-status
    variables:
      - name: app_changed
        value: "true"
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/git/commits/abc1234567890def?stat=false&verification=false&files=true
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/raw/applications/janitor-bot.application.yaml?ref=abc1234567890def
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/raw/projects/janitor-bot/application.yaml?ref=abc1234567890def
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/git/commits/abc1234567890def?stat=false&verification=false&files=true
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/raw/applications/janitor-bot.application.yaml?ref=abc1234567890def
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/raw/projects/janitor-bot/application.yaml?ref=abc1234567890def
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/statuses/abc1234567890def
    body:
      context: ArgoCD / sync / janitor-bot
      description: Succeeded - Healthy
      state: success
      target_url: "https://argocd.inf-k8s.net/applications/argocd/janitor-bot"
    service: forgejo
